# gom-jabbar

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
examples/dummy/: cfunc.mod  ifspec.ifs  test.py
gomjabbar/: __init__.py  const.py  generate.py  ifs_build.py  ifs_lex.py  ifs_parse.py  ifs_types.py
gomjabbar/data/: alloc.c.jinja  connections.c.jinja  macros.c  params.c.jinja
gomjabbar/ifs/: ast.py  build.py  lexer.py  parser.py
