# Documentation for the contents of this file can be found here:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = gomjabbar
version = attr: gomjabbar.__version__
description = NGSPICE Code Model Testing
url = https://github.com/enthought/gom-jabbar
author = John Wiggins, et. al.
author_email = info@enthought.com
maintainer = ETS Developers
maintainer_email = enthought-dev@enthought.com
license = BSD 3-Clause License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development :: Testing :: Mocking


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    jinja2
    ply

[options.package_data]
gomjabbar = data/*.jinja
